# Laba_algo_1

./: CMakeLists.txt  README.md  Отчет Алго_лб1.docx
src/: array_utils.cpp  array_utils.h  main.cpp  matrix_utils.cpp  matrix_utils.h  student_utils.cpp  student_utils.h
